# img-shuffle

./: Cargo.toml  README.md
src/: lib.rs  main.rs  validator.rs
src/handlers/: mod.rs
src/handlers/categorized_image/: mod.rs
src/handlers/random_image/: mod.rs
