[package]
name = "random-img-server"
version = "0.1.0"
edition = "2021"

[dependencies]  
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
axum = {version = "0.8.3", features = ["macros"]}
thiserror = "2.0.12"
rand = { version = "0.9.0", features = ["thread_rng"]}
tokio-util = {version = "0.7.14", features = ["io"]}
tower-http = { version = "0.6.2", features = ["trace"]}
tracing = "0.1"
tracing-subscriber = {version = "0.3", features = ["fmt", "std", "chrono", "env-filter"]}
tower = "0.5.2"

[profile.release]
opt-level = 3
codegen-units = 1
lto = "fat"
